change: max width to 100% and rounded of login form

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
+body {
+}
 #root {
-  max-width: 1280px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding: 2rem;
-  /* text-align: center; */
   font-family: 'Prompt', sans-serif;
+  background-color: #f3f4f6;
 }
 
 .logo {
