--- a/src/components/AdminSidebar/AdminSidebar.css
+++ b/src/components/AdminSidebar/AdminSidebar.css
@@ -1,5 +1,5 @@
 @layer components {
-  .menu-list {
-    @apply flex flex-row;
+  .menu {
+    @apply flex flex-row py-4 px-6 gap-4 hover:bg-blue-900 cursor-pointer;
   }
 }
