--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 @import "./components/AdminSidebar/AdminSidebar.css";
 
 @layer base {
+  body {
+    @apply bg-gray-100
+  }
   h1 {
     @apply text-3xl
     font-medium
